# anvaya

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
daemon/: Cargo.toml
daemon/src/: main.rs
daemon/src/actions/: mod.rs
daemon/src/api/: mod.rs
daemon/src/filesystem/: mod.rs  ops.rs
daemon/src/models/: config.rs  error.rs  mod.rs  state.rs
daemon/src/permissions/: approver.rs  mod.rs  policy.rs
daemon/src/server/: cors.rs  mod.rs
docs/: Architecture.md  HowToUse.md  SECURITY.md
examples/: anvaya.env.example  smoke.sh
extension/: index.html  manifest.json  options.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vite.content.config.ts
extension/src/background/: index.ts
extension/src/content/: agent.ts  index.ts
extension/src/content/sites/: chatgpt.ts  claude.ts  gemini.ts  types.ts
extension/src/lib/: client.ts  messages.ts  protocol.ts  storage.ts
extension/src/options/: Options.tsx  index.tsx
extension/src/popup/: Popup.tsx  index.tsx
extension/src/ui/: components.tsx  styles.css
shared/: Cargo.toml
shared/src/: action.rs  lib.rs
