[workspace]
resolver = "2"
members = ["daemon", "shared"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anvaya/anvaya"
authors = ["Anvaya Contributors"]

[workspace.dependencies]
anvaya-shared = { path = "shared" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
ignore = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true