[package]
name = "anvaya-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "anvaya"
path = "src/main.rs"

[dependencies]
anvaya-shared = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
ignore = { workspace = true }
similar = "3.1.1"
regex = "1.13.0"
async-recursion = "1.1.1"
glob = "0.3.3"

[dev-dependencies]
tempfile = "3.27.0"
